Fixed command params.

--- a/etc/supervisord.conf
+++ b/etc/supervisord.conf
@@ -3,5 +3,5 @@ nodaemon=true
 loglevel=debug
 
 [program:mqtt-proxy]
-command=/go/src/github.com/ninjablocks/mqtt-proxy/mqtt-proxy
+command=/go/src/github.com/ninjablocks/mqtt-proxy/mqtt-proxy -config=/etc/mqtt-proxy/config.toml
 redirect_stderr=true
